# osint-mcp

./: .gitignore  AGENTS.md  AGENT_PROMPT.md  BLOG_POST.md  CLAUDE.md  COMPARISON.md  OSINT_MCP_TOOLS.md  README.md  docker-compose.yml  hermes-osint-prompt.md  pyproject.toml
.claude/skills/osint/: SKILL.md
codev/plans/: 1-osint-mcp.md
codev/specs/: 1-osint-mcp.md  10-fix-intelligence-report.md  11-opensanctions-plugin.md  2-headless-perf.md  3-free-feeds.md  4-feed-audit-extensibility.md  5-quick-win-feeds.md  6-fix-weak-tools.md  7-commit-cleanup.md  8-intelligence-findings-rewire.md  9-government-grade-feeds.md
mcp/: Dockerfile
mcp/src/osint_mcp/: client.py  resources.py
server/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  server.mjs  vite.config.ts
server/api/: _cors.js  _fetch.js  ais-snapshot.js  geocode.js  headless.js  opensky.js  polymarket-intel.js  rss-proxy.js  satellite-snapshot.js
server/api/modules/: _rss_helper.mjs  _template.mjs  acled_conflicts.mjs  ais_vessels.mjs  bgp_routing.mjs  celestrak_satellites.mjs  cert_transparency.mjs  civil_defense_alerts.mjs  country_risk_signals.mjs  cyber_news.mjs  defense_military_feeds.mjs  dynamic_risk_scores.mjs  energy_commodities_news.mjs  fr24_aircraft.mjs  gdelt_events.mjs  (+19 more)
server/scripts/: headless-cli.mjs  headless-module-scan.mjs  headless-ws.mjs  iran-market-brief.mjs
server/server/: router.ts
server/src/: App.ts  vite-env.d.ts
skill/hermes/: SKILL.md
skill/osint/: SKILL.md
src/osint_mcp/: __init__.py  client.py  resources.py  server.py
(+46 files in other folders)
