[project]
name = "osint-mcp"
version = "0.1.0"
description = "MCP server wrapping worldosint-headless OSINT API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.scripts]
osint-mcp = "osint_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["src/osint_mcp"]
